# PyKit

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  pylint.yml  release.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  pykit.inputs.rst  pykit.networktables.rst  pykit.rst  pykit.wpilog.rst
docs/source/getting_started/: existing_projects.rst  index.rst  installation.rst  traditional_replay.rst  what_is_pykit.rst
docs/source/getting_started/template_projects/: diff_drive.rst  index.rst  kitbot_2025.rst  skeleton.rst
pykit/: autolog.py  loggedrobot.py  logger.py  logreplaysource.py  logtable.py  logvalue.py
pykit/inputs/: loggableds.py  loggableinputs.py
pykit/networktables/: NT4Publisher.py  loggeddashboardchooser.py  loggednetworkboolean.py  loggednetworknumber.py  loggednetworkstring.py  nt4Publisher.py
pykit/watch/: cli_replaywatch.py
pykit/wpilog/: wpilogreader.py  wpilogwriter.py
src/pykit/: autolog.py  logdatareciever.py  loggedrobot.py  logger.py  logreplaysource.py  logtable.py  logvalue.py
src/pykit/networktables/: loggeddashboardchooser.py  loggednetworkboolean.py  loggednetworkinput.py  loggednetworknumber.py  loggednetworkstring.py  loggednetworkvalue.py  nt4Publisher.py
src/pykit/wpilog/: wpilogconstants.py  wpilogreader.py  wpilogwriter.py
template_projects/: package_templates.sh
template_projects/diff_drive/: pyproject.toml
template_projects/diff_drive/.wpilib/: wpilib_preferences.json
template_projects/diff_drive/src/: robot.py
template_projects/diff_drive/src/subsystems/drive/: driveiospark.py
template_projects/diif_drive/: README.md  pyproject.toml
template_projects/diif_drive/src/: robotcontainer.py
template_projects/diif_drive/src/constants/: __init__.py
template_projects/diif_drive/src/subsystems/drive/: driveio.py
template_projects/kitbot_2025/: .deploy_cfg  .gitignore  README.md  pyproject.toml
template_projects/kitbot_2025/src/: robot.py  robotcontainer.py
template_projects/kitbot_2025/src/commands/: drivecommands.py
template_projects/kitbot_2025/src/subsystems/drive/: drive.py  driveconstants.py  driveio.py  driveiosim.py  driveiospark.py  driveiotalonfx.py  gyroio.py  gyroiopigeon2.py
template_projects/kitbot_2025/src/subsystems/roller/: roller.py  rollerconstants.py  rollerio.py  rolleriosim.py  rolleriospark.py  rolleriotalonfx.py
template_projects/skeleton/: .gitignore  README.md  pyproject.toml
template_projects/skeleton/src/: robot.py
template_projects/skeleton/src/constants/: __init__.py
