[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykit"
version = "0.1.0"
description = "A logging, telemetry, and replay framework for FRC robots running python"
readme = "README.md"
authors = [{ name = "Luke Maxwell", email = "luke@whsrobotics.org" }]
license = "MIT"
keywords = ["pykit", "frc", "robotics", "logging", "telemetry", "replay"]
dependencies = [
    "pyntcore >=2025.3.2.3",
    "robotpy-wpimath >=2025.3.2.3",
    "robotpy-commands-v2 >=2025.3.2.3",
    "robotpy-wpiutil >=2025.3.2.3",
    "robotpy-hal >=2025.3.2.3"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/1757WestwoodRobotics/pykit"
