[project]
name = "pykit_kitbot_2025"
version = "0.1.0"
description = "An FRC Robot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wpilib>=2026.1.1",
    "robotpy-pykit==1.0.1",
    "robotpy-pykit-watch==1.0.0",
    "robotpy-halsim-gui>=2026.1.1",
    "robotpy-cli>=2026.0.1",
    "black>=25.9.8",
    "pylint>=4.0.2",
    "robotpy-pathplannerlib>=2026.1.1",
    "phoenix6>=26.1.0",
    # "robotpy-navx>=2026.1.1",
    "robotpy-rev>=2026.0.0",
    "robotpy-commands-v2>=2026.1.1",
    "robotpy-installer>=2026.0.1",
]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.1.1"
robotpy_extras = [
  "sim",
  "commands2",
  "navx",
  "phoenix6",
  "rev",
  "pathplannerlib"
]
requires = [
  "robotpy-pykit==1.0.1",
]
