[project]
name = "pykit_skeleton"
version = "0.1.0"
description = "An FRC Robot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wpilib>=2026.1.1",
    "robotpy-pykit==1.0.1",
    "robotpy-pykit-watch==1.0.0",
    "robotpy-halsim-gui>=2026.1.1",
    "robotpy-cli>=2026.0.1",
    "black>=25.9.8",
    "pylint>=4.0.2",
    "pyfrc>=2026.0.1",
    "robotpy-installer>=2026.0.1",
]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.1.1"
robotpy_extras = [
  "sim"
]
requires = [
  "robotpy-pykit==1.0.1",
]
